--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,6 +39,21 @@
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+        <% if logged_in? %>
+          <li>
+            <span class="username"><%= logged_in? %></span>
+          </li>
+          <li>
+            <%= link_to 'Logout', logout_path %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to "Sign Up", signup_path %>
+          </li>
+          <li>
+            <%= link_to "Log In", login_path %>
+          </li>
+        <% end %>
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
