Working properly and slightly styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@ span.username {
   margin: 15px;
   display: block;
 }
+
+.empty-cart {
+  margin: 15px;
+  display: block;
+  color: red;
+  font-style: italic;
+}
