--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,6 +29,35 @@
   </article>
   <article>
   <h2>Reviews</h2>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-1">
+      <%= form_for [@product, @review] do |form| %>
+        <% if form.object.errors.any? %>
+          <div class="alert alert-danger">
+            <strong>The following errors prevented saving:</strong>
+            <ul>
+              <% form.object.errors.full_messages.each do |error| %>
+                <li><%= error %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="form-group">
+          <%= form.label :rating %>
+          <%= form.select :rating, [1,2,3,4,5], class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :description %>
+          <%= form.text_area :description, class: 'form-control' %>
+
+        <%= form.submit 'Post Review', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+
+
   <table class="table table-bordered">
   <thead>
     <tr>
@@ -38,6 +67,6 @@
     </tr>
   </thead>
   <tbody>
-    <%= render @product.reviews %>
-    </tbody>
+    <%= render @reviews %>
+  </tbody>
 </section>
