--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,44 +29,27 @@
   </article>
   <article>
   <h2>Reviews</h2>
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-1">
-      <%= form_for [@product, @review] do |form| %>
-        <% if form.object.errors.any? %>
-          <div class="alert alert-danger">
-            <strong>The following errors prevented saving:</strong>
-            <ul>
-              <% form.object.errors.full_messages.each do |error| %>
-                <li><%= error %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
-
-        <div class="form-group">
-          <%= form.label :rating %>
-          <%= form.select :rating, [1,2,3,4,5], class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :description %>
-          <%= form.text_area :description, class: 'form-control' %>
-
-        <%= form.submit 'Post Review', class: 'btn btn-primary' %>
-      <% end %>
-    </div>
-  </div>
-
-
+  <% if @reviews.length == 0 %>
+  <h3>Be the first to write a review!</h3>
+  <% end %>
+    <% if logged_in? %>
+    <%= render 'products/post_revue' %>
+    <% end %>
+  <% if @reviews.length > 0  %> 
   <table class="table table-bordered">
   <thead>
     <tr>
       <th>User</th>
       <th>Rating</th>
       <th>Description</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
+ 
     <%= render @reviews %>
+    
   </tbody>
+  <% end %>
+  
 </section>
